# robotnik_pad

./: CMakeLists.txt  Readme.md  ds4drv-install.sh  ds4drv.conf  package.xml
.github/: Jenkinsfile
config/: ps4.yaml  robotnik_pad_plugins.yaml
include/robotnik_pad/: button.h  generic_pad_plugin.h  robotnik_pad.h
robotnik_pad/: CMakeLists.txt  package.xml
robotnik_pad/config/: robotnik_pad_plugins.yaml  robotnik_pad_plugins_ackermann_ps4.yaml  robotnik_pad_plugins_itowa.yaml  robotnik_pad_plugins_ps4.yaml  robotnik_pad_plugins_ps4_kinova_arm.yaml  robotnik_pad_plugins_ps4_kinova_arm_gen3.yaml  robotnik_pad_plugins_ps4_virtual.yaml  robotnik_pad_plugins_spacenav_kinova_arm.yaml  robotnik_pad_plugins_xbox360.yaml
robotnik_pad/launch/: robotnik_pad.launch  robotnik_pad_virtual.launch
robotnik_pad_msgs/: CMakeLists.txt  package.xml
robotnik_pad_plugins/: CMakeLists.txt  package.xml  robotnik_pad_pluginlib.xml
robotnik_pad_plugins/include/robotnik_pad_plugins/: ackermann_movement_plugin.h  blkarc_plugin.h  elevator_plugin.h  kinova_arm_gen3_plugin.h  kinova_arm_plugin.h  moveit_servo_teleoperation_plugin.h  movement_plugin.h  poi_plugin.h  ptz_plugin.h  rising_plugin.h  safety_movement_plugin.h
robotnik_pad_plugins/src/: ackermann_movement_plugin.cpp  blkarc_plugin.cpp  elevator_plugin.cpp  generic_pad_plugins.cpp  kinova_arm_gen3_plugin.cpp  kinova_arm_plugin.cpp  moveit_servo_teleoperation_plugin.cpp  movement_plugin.cpp  poi_plugin.cpp  ptz_plugin.cpp  rising_plugin.cpp  safety_movement_plugin.cpp  trigger_kinova_node.cpp
src/: robotnik_pad.cpp
(+7 files in other folders)
